--- a/platform/linuxbsd/meson.build
+++ b/platform/linuxbsd/meson.build
@@ -8,7 +8,7 @@
 linuxbsd_logo = custom_target(
     'linuxbsd_logo',
     output: ['logo_svg.gen.h'],
-    input: ['logo.svg'],
+    input: ['export/logo.svg'],
     command: [SCRIPT_PLATFORM_LOGO, '@INPUT@', '@OUTPUT@', 'linuxbsd'],
     build_by_default: true
 )
@@ -16,7 +16,7 @@ linuxbsd_logo = custom_target(
 linuxbsd_run_icon = custom_target(
     'android_run_icon',
     output: ['run_icon_svg.gen.h'],
-    input: ['run_icon.svg'],
+    input: ['export/run_icon.svg'],
     command: [SCRIPT_PLATFORM_LOGO, '@INPUT@', '@OUTPUT@', 'linuxbsd'],
     build_by_default: true
 )
